# tlanner

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md
docs/: architecture.md
docs/adr/: 000-template.md  001-monorepo.md  002-fastapi.md  003-why-qdrant.md
infra/: docker-compose.dev.yml  docker-compose.yml
services/user-service/: .env.example  Dockerfile  alembic.ini  pyproject.toml
services/user-service/alembic/: env.py
services/user-service/alembic/versions/: 20260628_1012_e4e4eb789def_create_users_table.py
services/user-service/app/: config.py  database.py  dependencies.py  main.py
services/user-service/app/models/: user.py
services/user-service/app/routers/: auth.py  users.py
services/user-service/app/schemas/: user.py
services/user-service/app/services/: auth.py  user.py
