[project]
name = "user-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "bcrypt==4.1.3",
    "fastapi==0.111.0",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "sqlalchemy==2.0.30",
    "structlog==24.1.0",
    "uvicorn[standard]==0.29.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
    "httpx==0.27.0",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
]
